--- a/mediademo/src/main/AndroidManifest.xml
+++ b/mediademo/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
             android:theme="@android:style/Theme.NoTitleBar"
             android:windowSoftInputMode="stateAlwaysHidden" />
 
+        <!--拍照7.0系统的支持 -->
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="com.example.android.fileprovider"
