添加了自定义的dialog

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include ':app', ':IoFiledemo', ':netstatechange', ':mediademo', ':materialdesigndemo', ':circleprogress', ':popupwindow',
+include ':app', ':IoFiledemo', ':netstatechange', ':mediademo', ':materialdesigndemo', ':circleprogress', ':popupwindow', ':progressdialog',
         ':servicedemo', ':umengdemo2', 'common_utils', ":vitamio"
