--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include ':app', ':IoFiledemo', ':netstatechange', ':mediademo', ':materialdesigndemo', ':circleprogress', ':popupwindow', ':progressdialog',
+include ':app', ':IoFiledemo', ':netstatechange', ':mediademo', ':materialdesigndemo', ':countprogress', ':popupwindow', ':progressdialog', ':elementtransition',
         ':servicedemo', ':umengdemo2', 'common_utils', ":vitamio"
