添加了圆形进度 进度可以是渐变色 并且带动画效果

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include ':app', ':IoFiledemo', ':netstatechange', ':mediademo', ':materialdesigndemo', ':countprogress', ':popupwindow', ':progressdialog', ':elementtransition',
+include ':app', ':IoFiledemo', ':netstatechange', ':mediademo', ':materialdesigndemo', ':countprogress', ':popupwindow', ':progressdialog', ':elementtransition', ':transitiondemo', ':switchdemo', ':swiperefreshlayoutheaddemo',
         ':servicedemo', ':umengdemo2', 'common_utils', ":vitamio"
