--- a/countprogress/build.gradle
+++ b/countprogress/build.gradle
@@ -29,5 +29,6 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support:cardview-v7:25.1.0'
+    compile 'com.timqi.sectorprogressview:library:2.0.0'
     testCompile 'junit:junit:4.12'
 }
