--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include ':app', ':IoFiledemo', ':netstatechange', ':mediademo', ':materialdesigndemo', ':countprogress', ':popupwindow', ':progressdialog', ':elementtransition', ':transitiondemo', ':switchdemo', ':swiperefreshlayoutheaddemo',
+include ':app', ':IoFiledemo', ':netstatechange', ':mediademo', ':materialdesigndemo', ':countprogress', ':popupwindow', ':progressdialog', ':elementtransition', ':transitiondemo', ':switchdemo', ':swiperefreshlayoutheaddemo', ':bottomsheet',
         ':servicedemo', ':umengdemo2', 'common_utils', ":vitamio"
