--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include ':app', ':IoFiledemo', ':netstatechange', ':mediademo', ':materialdesigndemo', ':countprogress', ':popupwindow', ':progressdialog', ':elementtransition', ':transitiondemo', ':switchdemo', ':swiperefreshlayoutheaddemo', ':bottomsheet', ':pinchartdemo',
-        ':servicedemo', ':umengdemo2', 'common_utils', ":vitamio",':MPChartLib'
+include ':app', ':IoFiledemo', ':netstatechange', ':mediademo', ':materialdesigndemo', ':countprogress', ':popupwindow', ':progressdialog', ':elementtransition', ':transitiondemo', ':switchdemo', ':swiperefreshlayoutheaddemo', ':bottomsheet', ':pinchartdemo', ':calendardemo',
+        ':servicedemo', ':umengdemo2', 'common_utils', ":vitamio", ':MPChartLib',':calendar',':common'
